// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-hBYLEG kKHfWT"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-hBYLEG kKHfWT"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-hBYLEG kKHfWT"
>
  <span
    className="sc-fqEDVf jfTxLg"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-hBYLEG kKHfWT"
>
  <div
    className="sc-imZoBe elvCaf"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-hBYLEG kKHfWT"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-hBYLEG fFZTRd"
  size="small"
/>
`;
